Checkbox alignment fixes

--- a/manon/checkbox-variables.scss
+++ b/manon/checkbox-variables.scss
@@ -5,7 +5,6 @@
   /* Checkbox */
   --checkbox-gap: 0.75rem;
   --checkbox-align-items: flex-start;
-  --checkbox-justify-content: flex-start;
 
   /* Box */
   --checkbox-width: 1.25rem;
