--- a/manon/checkbox.scss
+++ b/manon/checkbox.scss
@@ -36,8 +36,8 @@ form {
     &.required {
       flex-direction: column;
       gap: var(--checkbox-required-gap);
-      align-items: var(--checkbox-align-items);
-      justify-content: var(--checkbox-justify-content);
+      align-items: flex-start;
+      justify-content: var(--radio-align-items); /* Using alignment value because the flex direction is column */
 
       > div {
         padding: 0;
